syntax="proto3";
package internal_proto;
import "proto_struct.proto";
import "proto_enum.proto";

service ServiceConnect {
    rpc RegisterServiceRequest (C2S_Register) returns (stream  S2C_Register){};
    rpc SyncPlayerRequest (C2S_UserLogin) returns (stream  S2C_UserLogin){};
}

//游戏服务器注册到验证服务器
message C2S_Register{

}

//接收注册的消息
message S2C_Register{

}


//玩家登陆game服务，game服务向auth服务器验证请求
message C2S_UserLogin{
    string token = 1;
    string userGuid = 2;
}

//接收注册的消息
message S2C_UserLogin{
    E_LoginCode code = 1;//登陆编码
    S_UserInfo  info = 2;//返回的用户信息
}




